[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/tongue_end.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/frog1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/frog1jump.png" type="Texture" id=4]
[ext_resource path="res://Music/ribbit.wav" type="AudioStream" id=5]
[ext_resource path="res://Music/coin.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( 192, 672 )
collision_layer = 769
collision_mask = 769
motion/sync_to_physics = true
script = ExtResource( 2 )
idle_image = ExtResource( 3 )
jump_image = ExtResource( 4 )

[node name="GroundRaycast" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundRaycast"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.19209e-06, -8.58307e-06 )
scale = Vector2( 0.578313, 0.558139 )
z_index = 1
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0, -800 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2

[node name="TongueEnd" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="TongueBody" type="Line2D" parent="."]
scale = Vector2( 1, 3.19999 )
points = PoolVector2Array( 0, 0, 0, 0 )
width = 5.0
default_color = Color( 0.964706, 0.219608, 0.219608, 1 )

[node name="EnemyRaycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -220 )
collision_mask = 4

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="coinSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
